<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="125dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bigfloppa"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:text="@string/invitationText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/timeText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#B58E4E" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/dateText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#B58E4E" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/hostText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#B58E4E" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="161dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/partyText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#B58E4E" />

</LinearLayout>